examples/ingress/nginx-with-host-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-host-ingress
spec:
  selector:
    app: nginx-host-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
