examples/ingress/nginx-with-host-ingress/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`nginx.127.0.0.1.nip.io`)
      priority: 10
      services:
        - name: nginx-host-ingress
          port: 80
  tls: {}
